SEO and meta descriptions/kywords applied

--- a/pages/nutritionalinfo.html
+++ b/pages/nutritionalinfo.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nutritional Information | Calorie Deficit</title>
+    <meta name="description" content="Calculate your calorie deficit, find recipes and shop products to reach your goal.">
+    <meta name="keywords" content="calorie deficit, recipes, low calories, low fat, high protein, whey protein, nutritional information, macros, proteins, fats, calories">
     <link rel="icon" type="image/x-icon" href="../img/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -63,7 +65,10 @@
     <main class="nutriInfo">
             <h1>Nutritional Information</h1>
             <div class="info1 text-secondary">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores aut nesciunt minima aliquid molestias ullam autem error incidunt rem nostrum harum ad eos, sit consequatur perferendis vitae omnis! Praesentium quaerat, laborum aut corporis doloremque recusandae necessitatibus neque? Facere consectetur placeat dicta fugiat praesentium libero. Dolore quasi consectetur molestiae cum saepe earum illum inventore quidem tempore ratione voluptatem ea, sint est reprehenderit quas modi quisquam temporibus sequi impedit voluptatum suscipit, natus, illo consequatur officia. Quidem magnam numquam ut ea pariatur voluptates ex, deserunt iste cum asperiores possimus placeat dolor rerum, doloribus, minus dolores corporis qui deleniti sequi. Tempore facere quia quos ullam fugiat quisquam explicabo illo ipsa repudiandae pariatur quidem provident quibusdam, veritatis necessitatibus aliquid consectetur quas. Aliquid, nostrum ea, asperiores voluptates reprehenderit labore minima, voluptatibus sint quibusdam incidunt tempore velit dolorem assumenda. Aliquid at quibusdam totam accusamus fuga omnis ullam cumque iste officiis soluta facere laboriosam veritatis ipsam perspiciatis placeat tenetur voluptate voluptatum commodi ipsa reprehenderit quisquam modi, perferendis repellendus! Totam alias distinctio tempore qui voluptatum unde odit sint aspernatur, aperiam natus nobis expedita iusto earum numquam provident voluptatibus modi, eius fugiat at eligendi id debitis sequi laborum molestias? Cumque quisquam ab quasi placeat dolore provident? Libero aspernatur distinctio eligendi!</p>
+                <p><span>Macronutrients, or “macros,” are nutrients your body needs in large amounts to function optimally. Carbs, protein, and fat are the three main macros.</span></p>
+                <p>Macronutrients are a group of nutrients that provide your body with energy and the components it needs to maintain its structure and functions.</p>
+                <p>Macronutrients include carbohydrates, protein, and fat. They’re needed in relatively larger amounts than other nutrients, hence the term “macro.” Although there are recommended ranges for macronutrient intake, your needs vary based on your personal circumstances.</p>
+                <p>Each macronutrient has specific functions in your body. During digestion, they’re broken down into smaller parts. These parts are then used for bodily functions like energy production, muscle building, and giving structure to cells.</p>    
             </div>
             
             <!--accordion proteins, fats, carbs-->
@@ -77,7 +82,27 @@
                   <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
                     <div class="accordion-body">
                         <div class="protein__bg">
-                            <img src="../img/proteins.png" alt="">
+                            <p>
+                              <h4>Function:</h4>
+                              Proteins are digested into amino acids. Twenty amino acids have important functions in your body, 9 of which are essential and must be obtained from foods. Some of the main uses of amino acids from protein include:</p>
+                            <p>
+                              <li>Building and repairing.</li>
+                              <li>Providing structure.</li>
+                              <li>PH balance.</li>
+                              <li>Creating enzymes and hormones. </li>
+                            </p>
+                            <h4>Sources of protein include:</h4>
+                            <p>
+                              <li><span>Poultry:</span> chicken and turkey</li>
+                              <li><span>Eggs:</span> particularly egg whites</li>
+                              <li><span>Red meat:</span> beef, lamb, and pork</li>
+                              <li><span>Seafood:</span> salmon, shrimp, and cod</li>
+                              <li><span>Dairy products:</span> milk, yogurt, and cheese</li>
+                              <li><span>Beans and legumes:</span> black beans, lentils, and chickpeas</li>
+                              <li><span>Nuts and seeds:</span> almonds and pumpkin seeds</li>
+                              <li><span>Soy products:</span> tofu, edamame, and tempeh</li>
+                            </p>
+                            <img class="p-3" src="../img/proteins.png" alt="">
                             <a class="text-dark p-3" href="./recipes-highprotein.html">Check high protein recipes</a>
                         </div>
                     </div>
@@ -92,7 +117,24 @@
                   <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
                     <div class="accordion-body">
                         <div class="carbs__bg">
-                            <img src="../img/carbs.png" alt="carbs">
+                          <p>
+                            <h4>Function:</h4>
+                            Most carbs are broken down into glucose, or sugar molecules. This doesn’t apply to dietary fiber, a type of carbohydrate that isn’t broken down and passes through your body undigested. Still, some fiber is fermented by bacteria in your colon. Some of the main functions of carbs include: </p>
+                          <p>
+                            <li>Instant energy. </li>
+                            <li>Storing energy.</li>
+                            <li>Digestion.</li>
+                            <li>Helps you feel full. </li>
+                          </p>
+                          <h4>Sources of carbs include:</h4>
+                          <p>
+                            <li><span>Whole grains:</span> brown rice, oats, farro, and barley</li>
+                            <li><span>Vegetables: </span> peas, potatoes, corn, and other starchy veggies</li>
+                            <li><span>Fruits: </span>mangoes, bananas, figs, and apples</li>
+                            <li><span>Beans and legumes: </span>black beans, lentils, and chickpeas</li>
+                            <li><span>Dairy products:</span> milk and yogurt</li>
+                          </p>
+                            <img class="p-3" src="../img/carbs.png" alt="carbs">
                             <a class="text-dark p-3" href="./recipes-lowcalories.html">Check low calories recipes</a>
                         </div>
                     </div>
@@ -107,7 +149,25 @@
                   <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
                     <div class="accordion-body">
                         <div class="fats__bg">
-                            <img src="../img/fats.png" alt="fats">
+                          <p>
+                            <h4>Function:</h4>
+                            Fats are broken down into fatty acids and glycerol. Some of the main functions of lipids, or fats, include:</p>
+                          <p>
+                            <li>Cell membrane health.</li>
+                            <li>Storing energy. </li>
+                            <li>Transport and absorption.</li>
+                            <li>Insulation.</li>
+                          </p>
+                          <h4>Sources of fats include:</h4>
+                          <p>
+                            <li><span>Extra virgin olive oil</span></li>
+                            <li><span>Coconut:</span> fresh, dried, and coconut oil</li>
+                            <li><span>Avocados: </span>fresh and avocado oil</li>
+                            <li><span>Nuts and seeds:</span> almonds and pumpkin seeds</li>
+                            <li><span>Fatty fish: </span>salmon and herring</li>
+                            <li><span>Dairy products:</span> full fat yogurt and cheese</li>
+                          </p>
+                            <img class="p-3" src="../img/fats.png" alt="fats">
                             <a class="text-dark p-3" href="./recipes-lowfat.html">Check low fat recipes</a>
                         </div>
                     </div>
