--- a/pages/recipes-highprotein.html
+++ b/pages/recipes-highprotein.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipes | Calorie Deficit</title>
+    <meta name="description" content="Find thousands of low calorie, high protein and low fat recipes to reach your goal.">
+    <meta name="keywords" content="calorie deficit, recipes, low calories, high protein, low fat, whey protein">
     <link rel="icon" type="image/x-icon" href="../img/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -68,13 +70,13 @@
                 </h1>
             </div>
             <div class="text__recipes">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat delectus, harum vero suscipit illo quis hic ipsum eaque amet aspernatur nulla tenetur cumque, eveniet error reprehenderit rerum, quam iusto quos! Accusamus quaerat eos nobis vel praesentium itaque quasi, ipsum vero atque voluptatibus rem similique, soluta molestias, minima nostrum architecto nesciunt!
+              Whether you're trying to fuel up for a particularly busy day, have been intensifying your exercise routine, or you're just sick of feeling hungry all the time, boosting your protein intake may be one way to help you feel more satisfied.
             </div>
         </section>
          <!--recipes. Falta generar landings para cada receta, ahora no estan linkeadas a nada-->
-        <section class="recipes__cards__lowcalories">
+        <section class="recipes__cards">
             <div class="card card1" style="width: 18rem;">
-                <img src="../img/protein cookies.png" class="card-img-top" alt="protein-cookies">
+                <img src="../img/protein-cookies.png" class="card-img-top" alt="protein-cookies">
                 <div class="card-body">
                   <h5 class="card-title recipe-title">Protein cookies</h5>
                   <p class="card-text">153 calories</p>
@@ -85,7 +87,7 @@
                   <li class="list-group-item fats__colour">9,3g fats</li>
                 </ul>
                 <div class="card-body">
-                  <a href="./recipes-highprotein-protein_cookies.html" class="card-link">Go to recipe</a>
+                  <a href="./recipes-highprotein-protein-cookies.html" class="card-link">Go to recipe</a>
                 </div>
               </div>
               <div class="card card2" style="width: 18rem;">
@@ -104,7 +106,7 @@
                 </div>
               </div>
               <div class="card card3" style="width: 18rem;">
-                <img src="../img/Green pie.png" class="card-img-top" alt="green-pie">
+                <img src="../img/Green-pie.png" class="card-img-top" alt="green-pie">
                 <div class="card-body">
                   <h5 class="card-title recipe-title">Green pie</h5>
                   <p class="card-text">429 calories</p>
@@ -140,14 +142,14 @@
             <a href="./recipes-lowcalories.html">
                 <div class="cat1 landing__recipes">
                     <div class="maincat">
-                        <img src="../img/lowcalories.png" alt="Low calories">
+                        <img src="../img/lowcalories.png" alt="low-calories">
                     </div>
                 </div>
             </a>
             <a href="./recipes-lowfat.html">
                 <div class="cat3 landing__recipes">
                     <div class="maincat">
-                        <img src="../img/lowfat.png" alt="Low fat">
+                        <img src="../img/lowfat.png" alt="low-fat">
                     </div>
                 </div>
             </a>
