--- a/pages/recipes-lowcalories-eggplant-schnitzel.html
+++ b/pages/recipes-lowcalories-eggplant-schnitzel.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipes | Calorie Deficit</title>
+    <title>Eggplant schnitzel | Calorie Deficit</title>
+    <meta name="description" content="Find thousands of low calorie, high protein and low fat recipes to reach your goal.">
+    <meta name="keywords" content="calorie deficit, recipes, low calories, high protein, low fat, whey protein">
     <link rel="icon" type="image/x-icon" href="../img/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -63,17 +65,17 @@
     <main class="mainRecipes">
         <div class="recipe__main__container">
             <div class="recipe__picture">
-                <img src="../img/vegetable_soup.jpeg" alt="vegetable_soup">
+                <img src="../img/eggplant-schnitzel.png" alt="eggplant-schnitzel">
                 <h3>low calories recipe</h3>
             </div>
             <div class="recipe__title">
-                <h2>Vegetable soup</h2>
-                <h4>105 calories per serving</h4>
+                <h2>Eggplant schnitzel</h2>
+                <h4>58 calories per serving</h4>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis, nisi deserunt sequi ea quod vitae necessitatibus similique illo voluptatum tempore excepturi fuga, mollitia sint aspernatur voluptatem, numquam dolorum. Id, quas.</p>
                 <div class="recipe__title__macros">
-                    <div class="recipe__protein"> 3,1g protein</div>
-                    <div class="recipe__carbs">21,8g carbs</div>
-                    <div class="recipe__fats">0,7g fats</div>
+                    <div class="recipe__protein"> 3,2g protein</div>
+                    <div class="recipe__carbs">7,8g carbs</div>
+                    <div class="recipe__fats">1,7g fats</div>
                 </div>
                 <a href="./nutritionalinfo.html">Learn more about macros</a>
             </div>
@@ -82,14 +84,11 @@
             <div class="ingredients">
                 <h4>Ingredients</h4>
                 <ul>
-                    <li>280g leek</li>
-                    <li>160g onion</li>
-                    <li>2,5 glove garlic</li>
-                    <li>150g carrots</li>
-                    <li>310g zuccini</li>
-                    <li>130g sweet potatoe</li>
+                    <li>330g eggplant</li>
+                    <li>2 eggs</li>
+                    <li>65g breadcrumbs</li>
                 </ul>
-                <p>servings: 4</p>
+                <p>servings: 8</p>
             </div>
             <div class="steps">
                 <h4>Steps</h4>
@@ -100,19 +99,19 @@
             <a href="./recipes-lowcalories.html">Chech all low calories recipes</a>
         </div>
         <div class="recipe__third__container">
-          <div>
-              <h2>You may also like...</h2>
-          </div>
-          <div class="recipe__options">
-              <div class="recipe__option__1">
-                  <img src="../img/quinoa-burger.png" alt="quinoa-burger">
-                  <a href="./recipes-lowcalories-quinoa_burger.html">Quinoa burger</a> 
-              </div>
-              <div class="recipe__option__2">
-                  <img src="../img/eggplant_schnitzel.png" alt="eggplant_schnitzel">
-                  <a href="./recipes-lowcalories-eggplant_schnitzel.html">Eggplant schnitzel</a> 
-              </div>
-          </div>
+            <div>
+                <h2>You may also like...</h2>
+            </div>
+            <div class="recipe__options">
+                <div class="recipe__option__1">
+                    <img src="../img/quinoa-burger.png" alt="quinoa-burger">
+                    <a href="./recipes-lowcalories-quinoa-burger.html">Quinoa burger</a> 
+                </div>
+                <div class="recipe__option__2">
+                    <img src="../img/apple-crumble.png" alt="apple-crumble">
+                    <a href="./recipes-lowcalories-apple-crumble.html">Apple crumble</a> 
+                </div>
+            </div>
     </main>
     <footer class="footer">
         <!--Social media icons-->
