--- a/pages/recipes-lowcalories-quinoa-burger.html
+++ b/pages/recipes-lowcalories-quinoa-burger.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipes | Calorie Deficit</title>
+    <title>Quinoa burger | Calorie Deficit</title>
+    <meta name="description" content="Find thousands of low calorie, high protein and low fat recipes to reach your goal.">
+    <meta name="keywords" content="calorie deficit, recipes, low calories, high protein, low fat, whey protein">
     <link rel="icon" type="image/x-icon" href="../img/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -63,17 +65,17 @@
     <main class="mainRecipes">
         <div class="recipe__main__container">
             <div class="recipe__picture">
-                <img src="../img/eggplant_schnitzel.png" alt="vegetable_soup">
+                <img src="../img/quinoa-burger.png" alt="quinoa-burger">
                 <h3>low calories recipe</h3>
             </div>
             <div class="recipe__title">
-                <h2>Eggplant schnitzel</h2>
-                <h4>58 calories per serving</h4>
+                <h2>Quinoa burger</h2>
+                <h4>92 calories per serving</h4>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis, nisi deserunt sequi ea quod vitae necessitatibus similique illo voluptatum tempore excepturi fuga, mollitia sint aspernatur voluptatem, numquam dolorum. Id, quas.</p>
                 <div class="recipe__title__macros">
-                    <div class="recipe__protein"> 3,2g protein</div>
-                    <div class="recipe__carbs">7,8g carbs</div>
-                    <div class="recipe__fats">1,7g fats</div>
+                    <div class="recipe__protein"> 3,9g protein</div>
+                    <div class="recipe__carbs">13,7g carbs</div>
+                    <div class="recipe__fats">2g fats</div>
                 </div>
                 <a href="./nutritionalinfo.html">Learn more about macros</a>
             </div>
@@ -82,11 +84,14 @@
             <div class="ingredients">
                 <h4>Ingredients</h4>
                 <ul>
-                    <li>330g eggplant</li>
+                    <li>20g breadcrumbs</li>
                     <li>2 eggs</li>
-                    <li>65g breadcrumbs</li>
+                    <li>130g onions</li>
+                    <li>100g carrots</li>
+                    <li>310g zuccini</li>
+                    <li>200g white quinoa</li>
                 </ul>
-                <p>servings: 8</p>
+                <p>servings: 12</p>
             </div>
             <div class="steps">
                 <h4>Steps</h4>
@@ -97,19 +102,19 @@
             <a href="./recipes-lowcalories.html">Chech all low calories recipes</a>
         </div>
         <div class="recipe__third__container">
-            <div>
-                <h2>You may also like...</h2>
-            </div>
-            <div class="recipe__options">
-                <div class="recipe__option__1">
-                    <img src="../img/quinoa-burger.png" alt="quinoa-burger">
-                    <a href="./recipes-lowcalories-quinoa_burger.html">Quinoa burger</a> 
-                </div>
-                <div class="recipe__option__2">
-                    <img src="../img/apple crumble.png" alt="apple-crumble">
-                    <a href="./recipes-lowcalories-apple_crumble.html">Apple crumble</a> 
-                </div>
-            </div>
+          <div>
+              <h2>You may also like...</h2>
+          </div>
+          <div class="recipe__options">
+              <div class="recipe__option__1">
+                  <img src="../img/vegetable-soup.jpeg" alt="vegetable-soup">
+                  <a href="./recipes-lowcalories-vegetable_soup.html">Vegetable soup</a> 
+              </div>
+              <div class="recipe__option__2">
+                  <img src="../img/eggplant-schnitzel.png" alt="eggplant-schnitzel">
+                  <a href="./recipes-lowcalories-eggplant-schnitzel.html">Eggplant schnitzel</a> 
+              </div>
+          </div>
     </main>
     <footer class="footer">
         <!--Social media icons-->
