--- a/pages/recipes-lowcalories.html
+++ b/pages/recipes-lowcalories.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipes | Calorie Deficit</title>
+    <meta name="description" content="Find thousands of low calorie, high protein and low fat recipes to reach your goal.">
+    <meta name="keywords" content="calorie deficit, recipes, low calories, high protein, low fat, whey protein">
     <link rel="icon" type="image/x-icon" href="../img/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -68,13 +70,13 @@
                 </h1>
             </div>
             <div class="text__recipes">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat delectus, harum vero suscipit illo quis hic ipsum eaque amet aspernatur nulla tenetur cumque, eveniet error reprehenderit rerum, quam iusto quos! Accusamus quaerat eos nobis vel praesentium itaque quasi, ipsum vero atque voluptatibus rem similique, soluta molestias, minima nostrum architecto nesciunt!
+              When it comes to low-calorie meals, we're fans of recipes that go hard on flavorful, nutrient-packed ingredients like fresh seafood, colorful veg and filling whole grains.
             </div>
         </section>
         <!--recipes. Falta generar landings para cada receta, ahora no estan linkeadas a nada-->
-        <section class="recipes__cards__lowcalories">
+        <section class="recipes__cards">
             <div class="card card1" style="width: 18rem;">
-                <img src="../img/vegetable_soup.jpeg" class="card-img-top" alt="vegetable_soup">
+                <img src="../img/vegetable-soup.jpeg" class="card-img-top" alt="vegetable-soup">
                 <div class="card-body">
                   <h5 class="card-title recipe-title">Vegetable soup</h5>
                   <p class="card-text">105 calories</p>
@@ -85,11 +87,11 @@
                   <li class="list-group-item fats__colour">0,7g fats</li>
                 </ul>
                 <div class="card-body">
-                  <a href="./recipes-lowcalories-vegetable_soup.html" class="card-link">Go to recipe</a>
+                  <a href="./recipes-lowcalories-vegetable-soup.html" class="card-link">Go to recipe</a>
                 </div>
               </div>
               <div class="card card2" style="width: 18rem;">
-                <img src="../img/quinoa-burger.png" class="card-img-top" alt="recipe">
+                <img src="../img/quinoa-burger.png" class="card-img-top" alt="quinoa-burger">
                 <div class="card-body">
                   <h5 class="card-title recipe-title">Quinoa burger</h5>
                   <p class="card-text">92 calories</p>
@@ -100,11 +102,11 @@
                   <li class="list-group-item fats__colour">2g fats</li>
                 </ul>
                 <div class="card-body">
-                  <a href="./recipes-lowcalories-quinoa_burger.html" class="card-link">Go to recipe</a>
+                  <a href="./recipes-lowcalories-quinoa-burger.html" class="card-link">Go to recipe</a>
                 </div>
               </div>
               <div class="card card3" style="width: 18rem;">
-                <img src="../img/eggplant_schnitzel.png" class="card-img-top" alt="recipe">
+                <img src="../img/eggplant-schnitzel.png" class="card-img-top" alt="eggplant_schnitzel">
                 <div class="card-body">
                   <h5 class="card-title recipe-title">Eggplant schnitzel</h5>
                   <p class="card-text">58 calories</p>
@@ -115,11 +117,11 @@
                   <li class="list-group-item fats__colour">1,7g fats</li>
                 </ul>
                 <div class="card-body">
-                  <a href="./recipes-lowcalories-eggplant_schnitzel.html" class="card-link">Go to recipe</a>
+                  <a href="./recipes-lowcalories-eggplant-schnitzel.html" class="card-link">Go to recipe</a>
                 </div>
               </div>
               <div class="card card4" style="width: 18rem;">
-                <img src="../img/apple crumble.png" class="card-img-top" alt="recipe">
+                <img src="../img/apple-crumble.png" class="card-img-top" alt="apple-crumble">
                 <div class="card-body">
                   <h5 class="card-title recipe-title">Apple crumble</h5>
                   <p class="card-text">93 calories</p>
@@ -130,7 +132,7 @@
                   <li class="list-group-item fats__colour">2g fats</li>
                 </ul>
                 <div class="card-body">
-                  <a href="./recipes-lowcalories-apple_crumble.html" class="card-link">Go to recipe</a>
+                  <a href="./recipes-lowcalories-apple-crumble.html" class="card-link">Go to recipe</a>
                 </div>
               </div>
         </section>
@@ -140,14 +142,14 @@
             <a href="./recipes-highprotein.html">
                 <div class="cat2 landing__recipes">
                     <div class="maincat">
-                        <img src="../img/highprotein.png" alt="High protein">
+                        <img src="../img/highprotein.png" alt="high-protein">
                     </div>
                 </div>
             </a>
             <a href="./recipes-lowfat.html">
                 <div class="cat3 landing__recipes">
                     <div class="maincat">
-                        <img src="../img/lowfat.png" alt="Low fat">
+                        <img src="../img/lowfat.png" alt="low-fat">
                     </div>
                 </div>
             </a>
