--- a/pages/recipes-lowfat.html
+++ b/pages/recipes-lowfat.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipes | Calorie Deficit</title>
+    <meta name="description" content="Find thousands of low calorie, high protein and low fat recipes to reach your goal.">
+    <meta name="keywords" content="calorie deficit, recipes, low calories, high protein, low fat, whey protein">
     <link rel="icon" type="image/x-icon" href="../img/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -68,11 +70,11 @@
                 </h1>
             </div>
             <div class="text__recipes">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat delectus, harum vero suscipit illo quis hic ipsum eaque amet aspernatur nulla tenetur cumque, eveniet error reprehenderit rerum, quam iusto quos! Accusamus quaerat eos nobis vel praesentium itaque quasi, ipsum vero atque voluptatibus rem similique, soluta molestias, minima nostrum architecto nesciunt!
+              Tuck into nutritious, low-fat dishes that don't compromise on flavour. We've got everything from fresh salads, soups and wraps to hearty suppers and light desserts.
             </div>
         </section>
         <!--recipes. Falta generar landings para cada receta, ahora no estan linkeadas a nada-->
-        <section class="recipes__cards__lowcalories">
+        <section class="recipes__cards">
             <div class="card card1" style="width: 18rem;">
                 <img src="../img/whole-wheat-pancakes.png" class="card-img-top" alt="whole-wheat-pancakes">
                 <div class="card-body">
@@ -140,14 +142,14 @@
             <a href="./recipes-highprotein.html">
                 <div class="cat2 landing__recipes">
                     <div class="maincat">
-                        <img src="../img/highprotein.png" alt="High protein">
+                        <img src="../img/highprotein.png" alt="high-protein">
                     </div>
                 </div>
             </a>
             <a href="./recipes-lowcalories.html">
                 <div class="cat1 landing__recipes">
                     <div class="maincat">
-                        <img src="../img/lowcalories.png" alt="Low calories">
+                        <img src="../img/lowcalories.png" alt="low-calories">
                     </div>
                 </div>
             </a>
