--- a/pages/shop.html
+++ b/pages/shop.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shop | Calorie Deficit</title>
+    <meta name="description" content="Shop whey protein, shakers and BMI scales to reach your calorie deficit goal.">
+    <meta name="keywords" content="calorie deficit, BMI scales, shakers, whey protein">
     <link rel="icon" type="image/x-icon" href="../img/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -60,7 +62,7 @@
               </nav>
         </nav>
     </header>
-    <!--shop - categories. Falta crear landing para cada categoria + landing de cada producto. No estan linkeadas a nada ahora-->
+    <!--shop / categories-->
     <main class="main__shop">
         <a class="shakers__banner" href="./shop-shakers.html">
             <div>
