--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home | Calorie Deficit</title>
+    <meta name="description" content="Calculate your calorie deficit, find recipes and shop products to reach your goal.">
+    <meta name="keywords" content="calorie deficit, recipes, low calories, low fat, high protein, whey protein">
     <link rel="icon" type="image/x-icon" href="./img/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -99,28 +101,28 @@
         </div>
 
         <section class="container1">
-        <!--recipes-->
+        <!--recipes / categories-->
         <div class="recipes">
             <h2>Explore our recipes and reach your goal!</h2>
         </div>
         <a class="cat1" href="./pages/recipes-lowcalories.html">
             <div>
                 <div class="maincat">
-                    <img src="./img/lowcalories.png" alt="Low calories">
+                    <img src="./img/lowcalories.png" alt="low-calories">
                 </div>
             </div>
         </a>
         <a class="cat2" href="./pages/recipes-highprotein.html">
             <div>
                 <div class="maincat">
-                    <img src="./img/highprotein.png" alt="High protein">
+                    <img src="./img/highprotein.png" alt="high-protein">
                 </div>
             </div>
         </a>
         <a class="cat3" href="./pages/recipes-lowfat.html">
             <div>
                 <div class="maincat">
-                    <img src="./img/lowfat.png" alt="Low fat">
+                    <img src="./img/lowfat.png" alt="low-fat">
                 </div>
             </div>
         </a>
