--- a/pages/calculator.html
+++ b/pages/calculator.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator | Calorie Deficit</title>
+    <meta name="description" content="Calculate your calorie deficit, find recipes and shop products to reach your goal.">
+    <meta name="keywords" content="calorie deficit, recipes, low calories, low fat, high protein, whey protein, nutritional information, macros, proteins, fats, calories">
     <link rel="icon" type="image/x-icon" href="../img/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
