--- a/pages/caloriedeficit.html
+++ b/pages/caloriedeficit.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>What is a calorie deficit?| Calorie Deficit</title>
+    <meta name="description" content="Calculate your calorie deficit, find recipes and shop products to reach your goal.">
+    <meta name="keywords" content="calorie deficit, recipes, low calories, low fat, high protein, whey protein, nutritional information, macros, proteins, fats, calories">
     <link rel="icon" type="image/x-icon" href="../img/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -63,8 +65,15 @@
     <main class="mainCD">
         <div class="info">
             <h1 class="text-dark">What is a calorie deficit?</h1>
-            <p class="text-secondary">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veritatis earum minima obcaecati reprehenderit laborum expedita eum. Rerum velit distinctio mollitia commodi ad corrupti ipsa minima accusantium dolorum tempora, numquam nulla nesciunt perferendis aliquam ratione, quos hic maiores autem voluptatum sunt incidunt a molestiae nostrum officiis? Porro odit inventore consequatur iure dolores consectetur magni dicta eius numquam illum ad tempore excepturi ipsa unde quaerat necessitatibus temporibus eos natus itaque, totam pariatur modi? Molestias optio vel numquam debitis eaque, similique quasi. Nostrum molestias cumque consequatur pariatur? Provident eligendi, vitae doloremque quisquam minus facere tempora ex ipsum impedit architecto deserunt magni voluptas possimus.</p>
-            <img src="../img/caloriedeficit-info.jpeg" alt="Imagen">
+            <p class="text-secondary">A calorie deficit simply means you're eating fewer calories than you're burning. People use calorie deficit to lose weight and maintain weight loss.</p>
+            <p class="text-secondary">The calories you burn or expend each day — also known as calorie expenditure — include the following three components:</p>
+                <li class="text-secondary"><span>Resting energy expenditure (REE).</span> REE refers to the calories your body uses at rest for functions that keep you alive, such as breathing and blood circulation</li>    
+                <li class="text-secondary"><span>Thermic effect of food.</span> This involves the calories your body expends digesting, absorbing, and metabolizing food.</li>
+                <li class="text-secondary"><span>Activity energy expenditure.</span> This refers to the calories you expend during sports like exercise and non-exercise related activities, including fidgeting and performing household chores.</li>
+                <br> 
+            <p class="text-secondary">If you provide your body fewer calories than it needs to support these three components of calorie expenditure, you put your body into a calorie deficit. Doing so consistently for long periods results in weight loss (1Trusted Source).
+                Conversely, you will gain weight if you regularly provide your body more calories than it needs to support these functions. This is called a calorie surplus.</p>
+            <img src="../img/caloriedeficit-info.jpeg" alt="calorie-deficit-image">
         </div>
         <!--calculator-->
         <aside class="calculator">
@@ -137,21 +146,21 @@
         <a class="cat1" href="./recipes-lowcalories.html">
             <div>
                 <div class="maincat">
-                    <img src="../img/lowcalories.png" alt="Low calories">
+                    <img src="../img/lowcalories.png" alt="low-calories">
                 </div>
             </div>
         </a>
         <a class="cat2" href="./recipes-highprotein.html">
             <div>
                 <div class="maincat">
-                    <img src="../img/highprotein.png" alt="High protein">
+                    <img src="../img/highprotein.png" alt="high-protein">
                 </div>
             </div>
         </a>
         <a class="cat3" href="./recipes-lowfat.html">
             <div>
                 <div class="maincat">
-                    <img src="../img/lowfat.png" alt="Low fat">
+                    <img src="../img/lowfat.png" alt="low-fat">
                 </div>
             </div>
         </a>
