--- a/pages/recipes-highprotein-spanish-tortilla.html
+++ b/pages/recipes-highprotein-spanish-tortilla.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipes | Calorie Deficit</title>
+    <title>Spanish tortilla | Calorie Deficit</title>
+    <meta name="description" content="Find thousands of low calorie, high protein and low fat recipes to reach your goal.">
+    <meta name="keywords" content="calorie deficit, recipes, low calories, high protein, low fat, whey protein">
     <link rel="icon" type="image/x-icon" href="../img/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -104,11 +106,11 @@
             </div>
             <div class="recipe__options">
                 <div class="recipe__option__1">
-                    <img src="../img/protein cookies.png" alt="protein-cookies">
-                    <a href="./recipes-highprotein-protein_cookies.html">Protein cookies</a>
+                    <img src="../img/protein-cookies.png" alt="protein-cookies">
+                    <a href="./recipes-highprotein-protein-cookies.html">Protein cookies</a>
                 </div>
                 <div class="recipe__option__2">
-                    <img src="../img/Green pie.png" alt="green-pie">
+                    <img src="../img/Green-pie.png" alt="green-pie">
                     <a href="./recipes-highprotein-green-pie.html">Green pie</a> 
                 </div>
             </div>
