--- a/pages/recipes-lowcalories-apple-crumble.html
+++ b/pages/recipes-lowcalories-apple-crumble.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipes | Calorie Deficit</title>
+    <title>Apple crumble | Calorie Deficit</title>
+    <meta name="description" content="Find thousands of low calorie, high protein and low fat recipes to reach your goal.">
+    <meta name="keywords" content="calorie deficit, recipes, low calories, high protein, low fat, whey protein">
     <link rel="icon" type="image/x-icon" href="../img/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -63,7 +65,7 @@
     <main class="mainRecipes">
         <div class="recipe__main__container">
             <div class="recipe__picture">
-                <img src="../img/apple crumble.png" alt="vegetable_soup">
+                <img src="../img/apple-crumble.png" alt="vegetable-soup">
                 <h3>low calories recipe</h3>
             </div>
             <div class="recipe__title">
@@ -105,11 +107,11 @@
             <div class="recipe__options">
                 <div class="recipe__option__1">
                     <img src="../img/quinoa-burger.png" alt="quinoa-burger">
-                    <a href="./recipes-lowcalories-quinoa_burger.html">Quinoa burger</a>
+                    <a href="./recipes-lowcalories-quinoa-burger.html">Quinoa burger</a>
                 </div>
                 <div class="recipe__option__2">
-                    <img src="../img/eggplant_schnitzel.png" alt="eggplant_schnitzel">
-                    <a href="./recipes-lowcalories-eggplant_schnitzel.html">Eggplant schnitzel</a> 
+                    <img src="../img/eggplant-schnitzel.png" alt="eggplant-schnitzel">
+                    <a href="./recipes-lowcalories-eggplant-schnitzel.html">Eggplant schnitzel</a> 
                 </div>
             </div>
         </div>
