--- a/pages/recipes-lowfat-wholemeal-bread.html
+++ b/pages/recipes-lowfat-wholemeal-bread.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipes | Calorie Deficit</title>
+    <title>Wholemeal bread | Calorie Deficit</title>
+    <meta name="description" content="Find thousands of low calorie, high protein and low fat recipes to reach your goal.">
+    <meta name="keywords" content="calorie deficit, recipes, low calories, high protein, low fat, whey protein">
     <link rel="icon" type="image/x-icon" href="../img/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -69,7 +71,8 @@
             <div class="recipe__title">
                 <h2>Wholemeal bread</h2>
                 <h4>127 calories per serving</h4>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis, nisi deserunt sequi ea quod vitae necessitatibus similique illo voluptatum tempore excepturi fuga, mollitia sint aspernatur voluptatem, numquam dolorum. Id, quas.</p>
+                <p>
+                  This Wholemeal Bread Recipe is super-easy, no knead and perfect for beginners. Ready to bake in two hours and absolutely foolproof. Nothing beats freshly baked homemade bread!</p>
                 <div class="recipe__title__macros">
                     <div class="recipe__protein"> 4,2g protein</div>
                     <div class="recipe__carbs">24,1g carbs</div>
@@ -91,7 +94,11 @@
             </div>
             <div class="steps">
                 <h4>Steps</h4>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam ratione dolorum magni voluptatum officiis dolorem molestiae? Perferendis, molestiae? Quidem quas maiores eaque neque optio, officiis saepe quos recusandae modi, eum consectetur aut aliquam fugiat, iure nostrum aspernatur distinctio temporibus non sequi voluptatem nam suscipit aliquid quod? Aperiam natus omnis perspiciatis.</p>
+                <p>Measure the flour into a large mixing bowl, then all you do is simply sprinkle on the salt and easy bake yeast, using a spatula mix everything together thoroughly.</p>
+                <p>Make a well in the centre and pour in all the hand-hot water. Then mix the water into the flour gradually to form a dough.</p>
+                <p>Now put the dough into the tin and sprinkle the surface with a generous dusting of flour, then place it into the roomy greased polythene bag. Close it with a clip and leave it to rise for 1½ to 2 hours at room temperature until the centre is about 2cm above the height of the tin.</p>
+                <p><span>Pre-heat the oven to 200°C, gas mark 6.</span></p>
+                <p>When the dough has risen to above the top of the bread tin, remove the bag and bake near the centre of the oven for 40 minutes. If you like it crusty then return the bread, out of its tin, upside down to the oven for a further 5-10 minutes to crisp the base and sides.</p>
             </div>
         </div>
         <div class="recipe__secondary__container">
