--- a/pages/recipes-lowfat-yoghurt-caramel-ice-cream.html
+++ b/pages/recipes-lowfat-yoghurt-caramel-ice-cream.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipes | Calorie Deficit</title>
+    <title>Yoghurt & Caramel ice-cream | Calorie Deficit</title>
+    <meta name="description" content="Find thousands of low calorie, high protein and low fat recipes to reach your goal.">
+    <meta name="keywords" content="calorie deficit, recipes, low calories, high protein, low fat, whey protein">
     <link rel="icon" type="image/x-icon" href="../img/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -69,7 +71,7 @@
             <div class="recipe__title">
                 <h2>Yoghurt & caramel ice-cream</h2>
                 <h4>64 calories per serving</h4>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis, nisi deserunt sequi ea quod vitae necessitatibus similique illo voluptatum tempore excepturi fuga, mollitia sint aspernatur voluptatem, numquam dolorum. Id, quas.</p>
+                <p>This recipe is probably the best treat for warm summer days. Creamy yoghurt is swirled with decadent caramel sauce.</p>
                 <div class="recipe__title__macros">
                     <div class="recipe__protein"> 7,8g protein</div>
                     <div class="recipe__carbs">6g carbs</div>
@@ -91,7 +93,7 @@
             </div>
             <div class="steps">
                 <h4>Steps</h4>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam ratione dolorum magni voluptatum officiis dolorem molestiae? Perferendis, molestiae? Quidem quas maiores eaque neque optio, officiis saepe quos recusandae modi, eum consectetur aut aliquam fugiat, iure nostrum aspernatur distinctio temporibus non sequi voluptatem nam suscipit aliquid quod? Aperiam natus omnis perspiciatis.</p>
+                <p>Just mixed all the ingredients, put it some time in the frezzer and add caramel sauce on the top before eating!</p>
             </div>
         </div>
         <div class="recipe__secondary__container">
