--- a/pages/shop-bmi-scales.html
+++ b/pages/shop-bmi-scales.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shop BMI Scales | Calorie Deficit</title>
+    <title>Shop - BMI Scales | Calorie Deficit</title>
+    <meta name="description" content="Shop whey protein, shakers and BMI scales to reach your calorie deficit goal.">
+    <meta name="keywords" content="calorie deficit, BMI scales, shakers, whey protein">
     <link rel="icon" type="image/x-icon" href="../img/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
