--- a/pages/shop-shakers.html
+++ b/pages/shop-shakers.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shop Shakers | Calorie Deficit</title>
+    <title>Shop - Shakers | Calorie Deficit</title>
+    <meta name="description" content="Shop whey protein, shakers and BMI scales to reach your calorie deficit goal.">
+    <meta name="keywords" content="calorie deficit, BMI scales, shakers, whey protein">
     <link rel="icon" type="image/x-icon" href="../img/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -153,7 +155,7 @@
                     </div>
                     <div class="categorie_2">
                         <a href="./shop-bmi-scales.html">
-                            <img src="../img/scales-banner.jpeg" alt="BMI Scales">
+                            <img src="../img/scales-banner.jpeg" alt="BMI-scales">
                             <a href="./shop-bmi-scales.html">BMI Scales</a>
                         </a>
                     </div>
